multiple fall stops

--- a/1-screening.tex
+++ b/1-screening.tex
@@ -54,7 +54,7 @@ volumes depending on the size of the probe used. Methods that do not rely on ads
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
 The cavities within nanoporous materials provide an exceptionally large adsorbable surface area, which is extremely useful for increasing the number of molecules within a given volume or mass of material, several thousands of square meters can be found in a gram of some nanoporous materials.\autocite{Farha_2012} A higher surface area of nanoporous materials allows for a greater number of molecules to be adsorbed for applications such as storage, separation or reactions. Therefore, accurate measurement of surface area using both experimental and computational methods is of utmost importance. The Brunauer–Emmett–Teller (BET) theory is the most widely used method for experimental determination of surface areas based on adsorption isotherms.\autocite{Detsi_2011} Most BET areas are calculated using the \ce{N2} isotherm at its boiling temperature (\SI{77}{\kelvin}). While alternative probe adsorbates can be considered, they are not standardized.\autocite{Tian_2017} However, it is important to note that the definition of surface area is highly dependent on the measurement conditions and the fitting methodology employed. In a statistical experiment involving 61 laboratories, a set of twelve isotherms was provided for BET area calculation, revealing significant disparities in calculation results.\autocite{Osterrieth_2022} 
 
-Beyond the experimental techniques, Zeo++ and PoreBlazer softwares specialize in computing pore size distributions, surface areas and void fractions based on well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values utilize more comprehensive structural data rather than relying on adsorption models or isotherm data like the BET area calculation. However, the determination of these values heavily relies on a well-designed definition of the volume, the surface and the pore size to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate considered.\autocite{Hung_2021}. This PhD work relies on these computational methods to define geometrical descriptors of nanoporous materials.
+Beyond the experimental techniques, Zeo++ and PoreBlazer softwares specialize in computing pore size distributions, surface areas and void fractions based on well-defined structure files.\autocite{Zeo++,PoreBlazer} The definition of these values also depends on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values utilize more comprehensive structural data rather than relying on adsorption models or isotherm data like the BET area calculation. However, the determination of these values heavily relies on a well-designed definition of the volume, the surface and the pore size to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate considered.\autocite{Hung_2021} This PhD work relies on these computational methods to define geometrical descriptors of nanoporous materials.
 
 \subsubsection{Classes of nanoporous materials}
 
@@ -130,7 +130,7 @@ The following review aims to provide an exhaustive overview of different screeni
 
 Due to their high internal surface area, adsorption applications were a natural outlet for nanoporous materials. However, these materials can be used in a wide range of other applications. This section focuses on the physical and chemical properties that are not directly related to adsorption processes inside nanoporous materials, such as catalytic activity,\autocite{Singh_2015, Greeley_2006, Back_2020}
 mechanical properties,\autocite{Chibani_2019, Gaillac_2020}
-or thermal properties.\autocite{Toher_2014, Sarikurt_2020, Ducamp_2021} These properties require a more refined description of atomic interactions within the material. To accurately capture these properties, DFT simulations are typically performed. However, the computational cost required for DFT simulations is significantly higher, multiplying the computational time by several orders of magnitude compared to classical simulations. The size of the datasets screened is therefore much smaller (a few hundreds maximum), and the use of ML can potentially speed up the whole process. ML is based on lower-cost descriptors,\autocite{Evans_2017, Ducamp_2022} or can be used in ML potentials for molecular simulations\autocite{Eckhoff_2019,Friederich_2021}.
+or thermal properties.\autocite{Toher_2014, Sarikurt_2020, Ducamp_2021} These properties require a more refined description of atomic interactions within the material. To accurately capture these properties, DFT simulations are typically performed. However, the computational cost required for DFT simulations is significantly higher, multiplying the computational time by several orders of magnitude compared to classical simulations. The size of the datasets screened is therefore much smaller (a few hundreds maximum), and the use of ML can potentially speed up the whole process. ML is based on lower-cost descriptors,\autocite{Evans_2017, Ducamp_2022} or can be used in ML potentials for molecular simulations.\autocite{Eckhoff_2019,Friederich_2021}
 
 \subsubsection{Catalytic activity}
 
@@ -232,7 +232,7 @@ In its early development, computational screening was mainly used to predict the
 
 One can leverage the high surface density of the nanoporous materials, especially the MOFs, to stock in very low-density gas. In the field of energy storage or transportation, natural gas (mainly methane) and hydrogen are considered plausible alternative fuels to replace conventional ones for transport. The US Department of Energy (US DOE) recently financed research programs and set targets for methane and hydrogen storage. Nanoporous materials could reduce energy, infrastructure and security cost due to the required compression and cooling. This section focuses on high-throughput screening for methane storage in nanoporous materials, before broadening the scope hydrogen and other perspectives.
 
-One of the pioneering works in computational screening was published in 2012 by Wilmer et al.\autocite{Wilmer_2012}. They performed a large-scale screening of 137,953 hypothetical MOF structures to estimate the methane storage capacity of each MOF at \SI{35}{\bar} and \SI{298}{\kelvin} based on the US DOE standards. Back then, the US DOE set a target methane capacity value of 180 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$ (which has since been achieved by several materials reported in the literature). In their large-scale analysis, Wilmer et al.\ found over 300 hypothetical MOFs that meet the targeted requirements and the best one can store up to 267 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$, surpassing the state-of-the-art of the time. From their large dataset, a preliminary structure-property relationship analysis revealed that void fraction values of approximately 0.8 and gravimetric surface areas in a range $2500$-$3000$ \si{\square\meter\cubic\centi\meter} resulted in the highest methane capacities. Optimal pore size is also shown to be around the size of one or two methane molecule(s). Maximization of gravimetric surface area was a common strategy in the MOF design for storage applications, but this study showed the existence of an optimal range of surface area values. Computational screenings can draw clear relationships between structural descriptors and performance. Later, a more quantitative relationship was drawn by Fernandez et al.\ using ML models as illustrated in Figure~\ref{fgr:Fernandez_2013}. Beware not to over-interpret the relation given by the response surface, since the identified maxima do not always have a physical reality, especially where there is no training data in the area pointed by the red arrows. However, it highlights promising unexplored feature space and shows potential research directions.
+One of the pioneering works in computational screening was published in 2012 by Wilmer et al.\autocite{Wilmer_2012} They performed a large-scale screening of 137,953 hypothetical MOF structures to estimate the methane storage capacity of each MOF at \SI{35}{\bar} and \SI{298}{\kelvin} based on the US DOE standards. Back then, the US DOE set a target methane capacity value of 180 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$ (which has since been achieved by several materials reported in the literature). In their large-scale analysis, Wilmer et al.\ found over 300 hypothetical MOFs that meet the targeted requirements and the best one can store up to 267 vol{\footnotesize$^\mathrm{STP}$}vol$^{-1}$, surpassing the state-of-the-art of the time. From their large dataset, a preliminary structure-property relationship analysis revealed that void fraction values of approximately 0.8 and gravimetric surface areas in a range $2500$-$3000$ \si{\square\meter\cubic\centi\meter} resulted in the highest methane capacities. Optimal pore size is also shown to be around the size of one or two methane molecule(s). Maximization of gravimetric surface area was a common strategy in the MOF design for storage applications, but this study showed the existence of an optimal range of surface area values. Computational screenings can draw clear relationships between structural descriptors and performance. Later, a more quantitative relationship was drawn by Fernandez et al.\ using ML models as illustrated in Figure~\ref{fgr:Fernandez_2013}. Beware not to over-interpret the relation given by the response surface, since the identified maxima do not always have a physical reality, especially where there is no training data in the area pointed by the red arrows. However, it highlights promising unexplored feature space and shows potential research directions.
 
 \begin{figure}[ht]
 \centering
