--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -20,7 +20,7 @@ In separation processes, transport properties govern the kinetics of the adsorpt
 
 % From the macroscopic brownian motion modeled by the
 % Fick's law
-Since the observation of pollen motion by the botanist Brown in 1826, the seemingly erratic movement of particles in a static bulk medium has been thoroughly observed and studied by scientists. Subsequently, Fick proposed a macroscopic model for this phenomenon, known as Brownian motion, by introducing the coefficient $D_x$ in a diffusion equation~\ref{eq:fick} (1D) based on experimental measurements of concentration $\phi$.\autocite{Fick_1855}. According to this law (valid only for independent particles), particles tend to move from regions of higher concentration to regions of lower concentration within the bulk medium.
+Since the observation of pollen motion by the botanist Brown in 1826, the seemingly erratic movement of particles in a static bulk medium has been thoroughly observed and studied by scientists. Subsequently, Fick proposed a macroscopic model for this phenomenon, known as Brownian motion, by introducing the coefficient $D_x$ in a diffusion equation~\ref{eq:fick} (1D) based on experimental measurements of concentration $\phi$.\autocite{Fick_1855} According to this law (valid only for independent particles), particles tend to move from regions of higher concentration to regions of lower concentration within the bulk medium.
 
 \begin{equation}\label{eq:fick}
   \frac{\partial \phi}{\partial t} = D_x \frac{\partial^2 \phi}{{\partial x}^2}
@@ -175,7 +175,7 @@ This previous simulation can be considered as the most accurate one, but it is n
 \caption{ On the left panel, the MSD in log-log scale and a fit to the relation $\text{MSD}(\tau) = K_\alpha\tau^\alpha$ using an MD simulation of a \SI{5}{\fs}-time step and 500 million steps are shown. A better linear fit is obtained with this new configuration of the MD simulation compared to Figure~\ref{fgr:MSD_init}, as more timescales are explored while utilizing the same computational resources. On the right panel, the MSD on the timescale of the diffusion regime is presented. The linear fit demonstrates improved performance compared to the previous Figure~\ref{fgr:MSD_linear_init}.}\label{fgr:MSD_5fs}
 \end{figure}
 
-To further support the use of a higher time integration step, the origin of the value of \SI{1}{\fs} needs to be understood. This value is typically justified by the Nyquist-Shannon sampling theorem, which suggests that the integration step should be at most half of the period of the fastest vibration within the system. In the case of a C--H vibration, the maximum time step value is \SI{5}{\fs}, and to be on the safe side, a time step of $1$--$2$~\si{\fs} is chosen in most diffusion studies in nanoporous materials.\autocite{Bukowski_2021}. However, in the system of xenon diffusing in a rigid environment, there are no vibrational limitations as previously described. It is hypothesized in this thesis that using higher time steps in this situation can provide easier access to longer timescales. Nevertheless, further studies are required to ensure the validity of the quantities derived from these MD simulations. The value of \SI{5}{\fs} is at the higher end of what is typically observed in MD simulations, but it can be justified by the rigidity of the framework and the adsorbate being considered. Even higher time steps could be tested, but for more reliable results, a reasonable middle ground of \SI{5}{\fs} was chosen for all high-throughput screening of the transport properties.
+To further support the use of a higher time integration step, the origin of the value of \SI{1}{\fs} needs to be understood. This value is typically justified by the Nyquist-Shannon sampling theorem, which suggests that the integration step should be at most half of the period of the fastest vibration within the system. In the case of a C--H vibration, the maximum time step value is \SI{5}{\fs}, and to be on the safe side, a time step of $1$--$2$~\si{\fs} is chosen in most diffusion studies in nanoporous materials.\autocite{Bukowski_2021} However, in the system of xenon diffusing in a rigid environment, there are no vibrational limitations as previously described. It is hypothesized in this thesis that using higher time steps in this situation can provide easier access to longer timescales. Nevertheless, further studies are required to ensure the validity of the quantities derived from these MD simulations. The value of \SI{5}{\fs} is at the higher end of what is typically observed in MD simulations, but it can be justified by the rigidity of the framework and the adsorbate being considered. Even higher time steps could be tested, but for more reliable results, a reasonable middle ground of \SI{5}{\fs} was chosen for all high-throughput screening of the transport properties.
 
 \subsection{High-throughput screening of diffusion coefficients}
 
