--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -51,13 +51,13 @@ The relevance of the diffusion coefficient calculated by these methods can only 
   \caption{ (a) Different zones in a breakthrough curve reprinted from the open-access article~\cite{Sharma_2023}. (b) Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. Reprinted with permission from Ref.~\cite{Banerjee_2016} copyright \copyright\ 2016 Springer Nature. }\label{fgr:breakthrough}
 \end{figure}
 
-A breakthrough curve can be broken down into three different zones: an unsaturated zone, a mass transfer zone, and a saturated zone, as shown in Figure~\ref{fgr:breakthrough_zones}. The mass transfer zone can be qualitatively interpreted as a consequence of the different transport properties. For instance, The breakthrough curves are based on quantities obtained from an adsorption isotherm fit, and mass transfer properties such as the self-diffusion coefficient and material surface diffusion (Knudsen diffusion).\autocite{Sharma_2023}. This tool has the potential to generate breakthrough curves and compare them to experimental curves. When the isotherm fitting properties are derived from experimental calculations, the only variable remaining is the mass transfer term. In this case, this tool can be used to qualitatively validate a calculated self-diffusion coefficient value.
+A breakthrough curve can be broken down into three different zones: an unsaturated zone, a mass transfer zone, and a saturated zone, as shown in Figure~\ref{fgr:breakthrough_zones}. The mass transfer zone can be qualitatively interpreted as a consequence of the different transport properties. For instance, The breakthrough curves are based on quantities obtained from an adsorption isotherm fit, and mass transfer properties such as the self-diffusion coefficient and material surface diffusion (Knudsen diffusion).\autocite{Sharma_2023} This tool has the potential to generate breakthrough curves and compare them to experimental curves. When the isotherm fitting properties are derived from experimental calculations, the only variable remaining is the mass transfer term. In this case, this tool can be used to qualitatively validate a calculated self-diffusion coefficient value.
 
 Using SBMOF-1 as an example (Figure~\ref{fgr:sbmof_breakthrough}), a rather slow mass transfer can be associated with \ce{CO2}, while the mass transfer corresponds to a vertical line for the other components, indicating fast diffusion rates. Consequently, there is a diffusion limitation for \ce{CO2} but not for the other adsorbates in the SBMOF-1 material. However, the absence of diffusion limitation for xenon sheds light on an apparent inconsistency with the diffusion coefficient calculated by an MD simulation ($3\times 10^{-8}$\si{\square\cm\per\s}). The next section on the flexible nature of SBMOF-1 offers a reasonable explanation for this discrepancy between the experimental and simulated evaluations of the diffusion.
 
 \section{Screening of flexible materials}
 
-The preference for studying rigid frameworks in computational studies is due to the high complexity associated with the simulation of the dynamics of a flexible framework. Given the considerable cost associated with simulating a grand canonical ensemble using MC methods, the simulation of a flexible framework would be even more computationally expensive, as it would require relaxation of the volume and simulation of an osmotic ensemble ($\mu$,$P$,$T$), which necessitates additional MC moves on the volume of the unit cell itself.\autocite{Bousquet2012}. Although this type of MC simulation describes more accurately every aspect of flexibility, including intrinsic flexibility due to thermal agitation and adsorbate-induced flexibility, it is prohibitively time-consuming in large-scale screening procedures. Therefore, it is more practical to use this type of simulation as a precise method to confirm the properties of a few top materials.
+The preference for studying rigid frameworks in computational studies is due to the high complexity associated with the simulation of the dynamics of a flexible framework. Given the considerable cost associated with simulating a grand canonical ensemble using MC methods, the simulation of a flexible framework would be even more computationally expensive, as it would require relaxation of the volume and simulation of an osmotic ensemble ($\mu$,$P$,$T$), which necessitates additional MC moves on the volume of the unit cell itself.\autocite{Bousquet2012} Although this type of MC simulation describes more accurately every aspect of flexibility, including intrinsic flexibility due to thermal agitation and adsorbate-induced flexibility, it is prohibitively time-consuming in large-scale screening procedures. Therefore, it is more practical to use this type of simulation as a precise method to confirm the properties of a few top materials.
 
 In order to incorporate flexibility effects in the screening procedure at a minimal computational cost, another approach consists in using a set of rigid structures that reflects the structural diversity generated by the thermal agitation of the nanoporous material. A first study on the effect of this intrinsic flexibility on the Xe/Kr selectivity suggests that some materials could lose selectivity due to the less favorable pore size as the structure vibrates.\autocite{Witman_2017} For instance, it was found that the differences between the experimental and theoretical Xe/Kr selectivity of \texttt{KAXQIL}\autocite{KAXQIL} are caused by its intrinsic flexibility, which questions the performance ranking obtained through rigid-framework screening. In this section, the study of Witman et al.\autocite{Witman_2017} on a screening of intrinsic flexibility will be detailed, with a specific focus on the case of \texttt{KAXQIL}. The subsequent flexibility study will be based on the structural diversity among similar deposited experimental structures. Notably, there exist a dozen different structures with the same chemical nature as \texttt{KAXQIL}, but with very distinct structural characteristics depending on the loaded adsorbate, which suggests an adsorbate-induced flexibility in addition to the previously studied intrinsic flexibility. 
 
