--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -716,7 +716,7 @@ In the context of xenon-krypton separation using nanoporous materials, pressure 
 
 By using a thermodynamic approach to describe the separation selectivity, the differences in selectivity were elucidated between different pressures (and therefore different loading regimes of the frameworks), primarily attributed to the variations in adsorption enthalpies for Xe and Kr.By delving into specific examples, the microscopic origins of these selectivity changes were uncovered and linked to the relative contributions of host--guest and guest--guest interactions. The population of different adsorption sites or repacking of the adsorbed phase at higher loadings can lead to significant alterations in overall selectivity. The underlying mechanisms of selectivity at high pressure are complex and unique to each framework, requiring a good understanding of the interactions between guest molecules constrained in the nanopores. Nevertheless, this proposed classification of the interactions at play can guide the future design of more efficient high-throughput screening procedures.
 
-For instance, the essentially enthalpic nature of the xenon/krypton separation process underscores the importance of developing more efficient methods for sampling interaction energies and utilizing them as cost-effective descriptors for analyzing an increasing number of structures. In the subsequent chapter, different approaches for evaluating adsorption enthalpy will be explored, considering the computation time required and the accuracy of each method. Additionally, the influence of partial pressure, manifested through changes in composition or pressure, raises questions about the potential use of infinite dilution thermodynamic quantities to predict selectivity at any pressure (GCMC). Numerous studies have focused on predicting GCMC simulations.\autocite{Simon_2015,Shi_2023,Kang_2023,Li_2023}. The thermodynamics-based approach combined with characterizing pore diversity holds the potential to yield improved results in predicting GCMC values of selectivity, contributing to a more comprehensive understanding of adsorption processes in nanoporous materials.
+For instance, the essentially enthalpic nature of the xenon/krypton separation process underscores the importance of developing more efficient methods for sampling interaction energies and utilizing them as cost-effective descriptors for analyzing an increasing number of structures. In the subsequent chapter, different approaches for evaluating adsorption enthalpy will be explored, considering the computation time required and the accuracy of each method. Additionally, the influence of partial pressure, manifested through changes in composition or pressure, raises questions about the potential use of infinite dilution thermodynamic quantities to predict selectivity at any pressure (GCMC). Numerous studies have focused on predicting GCMC simulations.\autocite{Simon_2015,Shi_2023,Kang_2023,Li_2023} The thermodynamics-based approach combined with characterizing pore diversity holds the potential to yield improved results in predicting GCMC values of selectivity, contributing to a more comprehensive understanding of adsorption processes in nanoporous materials.
 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
