--- a/0-intro.tex
+++ b/0-intro.tex
@@ -13,7 +13,7 @@ In the industry, Xe/Kr separation is usually based on cryogenic distillation of 
 % computation
 For the process to be viable, materials need to demonstrate improved performance, and numerous studies focus on synthesizing increasingly selective materials by leveraging chemical insight into noble gas adsorption properties.\autocite{Chen_2014, Li_2019, Pei_2022} Computational screening plays a crucial role in accelerating the discovery of novel materials with key properties, allowing for the identification of factors that contribute to their performance and the pre-selection of candidates for further experimental studies. The combination of computational discovery and experimental validation, as recently conceptualized by Lyu et al., offers a synergistic workflow to advance material discovery.\autocite{Lyu_2020, Jablonka_2022} However, computational chemists face two major challenges in effectively guiding experimental discoveries: generating a greater number of structures reliably and evaluating them using fast and accurate models. This work will primarily focus on the development of tools to address the latter challenge.
 
-The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 structures have been digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To efficiently handle this ever-increasing quantity of structures, researchers are developing screening strategies for identifying the best materials, while gaining chemical intuition about the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to expedite their screening procedures.\autocite{Fernandez_2013,Simon_2015,Rosen_2021} Current screening strategies predominantly rely on computational tools that are better suited for single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, multiple variables are necessary to fully assess performance, including selectivity, working capacity, and the kinetics and thermodynamics associated with material regeneration (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims to address both of these challenges by designing more efficient tools for high-throughput screening, encompassing not only the most commonly studied selectivity performance metric but also transport properties and other relevant factors. 
+The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 structures have been digitally constructed.\autocite{Wilmer_2012,Boyd_2016,Colon_2017} To efficiently handle this ever-increasing quantity of structures, researchers are developing screening strategies for identifying the best materials, while gaining chemical intuition about the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to expedite their screening procedures.\autocite{Fernandez_2013,Simon_2015,Rosen_2021} Current screening strategies predominantly rely on computational tools that are better suited for single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, multiple variables are necessary to fully assess performance, including selectivity, working capacity, and the kinetics and thermodynamics associated with material regeneration (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims to address both of these challenges by designing more efficient tools for high-throughput screening, encompassing not only the most commonly studied selectivity performance metric but also transport properties and other relevant factors. 
 
 \vspace{1cm}
 \begin{center}
