--- a/1-screening.tex
+++ b/1-screening.tex
@@ -153,7 +153,7 @@ Later, Rosen et al.\ enlarged the scope of materials screened to other metals.\a
 As this brute force screening approach can quickly become cumbersome, researchers in the field are striving to find essential structure-activity relationships to accelerate future computational screenings.
 Several descriptors have been developed for high-throughput screenings. For instance, Butler et al.\ used electron removal energies to explain photocatalytic behaviors of MOFs,\autocite{Butler_2014} while Rosen et al.\ showed that the energy required to form the metal oxide intermediate was a major descriptor of the thermal catalysis of alkane oxidation by \ce{N2O}.\autocite{Rosen_HTPDFT_2019} Fumanal et al.\ presented a screening protocol based on two energy-based descriptors to predict the photocatalytic properties of MOFs.\autocite{Fumanal_descriptor_2020} {Rosen et al.\ recently conducted screenings of thousands of MOF structures to compare different DFT functionals and leveraged the calculated data to train machine learning models capable of rapidly predicting MOF band gaps.\autocite{Rosen_2022_high} } 
 
-The development of ML methods is also critical in the field,\autocite{Rosen_2021} although the lack of centralized database with high precision descriptors poses a challenge for the future of these methods. The influence of defects, the different ways of modeling MOFs as periodic structures or clusters, the diversity of structures and the stability of such structures remain open problems. However, these challenges do not undermine the major role of high-throughput screenings in the early design process of nanoporous materials for catalysis. In conclusion, for a more comprehensive understanding of this topic, readers are encouraged to refer to a more exhaustive presentation in Ref.~\autocite{Rosen_2022}.
+The development of ML methods is also critical in the field,\autocite{Rosen_2021} although the lack of centralized database with high precision descriptors poses a challenge for the future of these methods. The influence of defects, the different ways of modeling MOFs as periodic structures or clusters, the diversity of structures and the stability of such structures remain open problems. However, these challenges do not undermine the major role of high-throughput screenings in the early design process of nanoporous materials for catalysis. In conclusion, for a more comprehensive understanding of this topic, readers are encouraged to refer to a more exhaustive presentation in Ref.~\cite{Rosen_2022}.
 
 \subsubsection{Mechanical properties}
 
