--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -181,7 +181,7 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). We removed the 291 structures with several channels, because in an infinite dilution MD simulation, we can only probe one channel at a time. For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all simulations are fully completed at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 4,880 MSD data are exploitable (according to the condition: R$^2>0.9$) even if the total 500 million steps are not always completed, while only 3,793 structures are completely finished. Finally, we end up with 4,873 structures (the difference corresponds to energy barrier values that could not be determined).
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). We removed the 291 structures with several channels, because in an infinite dilution MD simulation, we can only probe one channel at a time. For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all simulations are fully completed at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be used for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable (according to the condition: R$^2>0.9$) even if the total 500 million steps are not always completed, while only 3,899 structures are completely finished.
 
 To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) are sequentially analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales is chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ are removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit out of the 2--47\si{\ns} and 50--950~\si{\ns} timescales.
 
@@ -515,7 +515,7 @@ The subsequent discussion will focus on the relationship between this approximat
 
 \subsection{Relation of this activation energy to the diffusion}
 
-The xenon diffusion activation energy was calculated for all the 5,125 structures selected for the xenon diffusion coefficient screening presented in section~\ref{sct:xenon_diff_screen}. An energy step of $\delta E$ of \SI{0.1}{\kJ\per\mol} was employed during the energy loop to determine the minimal energy barrier for each unique channel in the material. Subsequently, an activation energy can be derived and compared to the diffusion coefficients. To avoid any potential noise arising from the MD simulation initialization problem, materials with significantly different energy barrier values from one channel to another (standard deviation of energy barrier values higher than \SI{1}{\kJ\per\mol}) were excluded. These materials accounted for only 145 out of the total 5,125 materials.
+The xenon diffusion activation energy was calculated for all the 5,125 structures selected for the xenon diffusion coefficient screening presented in section~\ref{sct:xenon_diff_screen}. An energy step of $\delta E$ of \SI{0.1}{\kJ\per\mol} was employed during the energy loop to determine the minimal energy barrier for each unique channel in the material. Subsequently, an activation energy can be derived and compared to the diffusion coefficients. To avoid any potential noise arising from the MD simulation initialization problem, materials with significantly different energy barrier values from one channel to another (standard deviation of energy barrier values higher than \SI{1}{\kJ\per\mol}) were excluded. These materials accounted for only 145 out of the total 5,125 materials, leaving 4,880 structures for the upcoming analyses. Due to missing values for the energy barrier (5), the surface area (1) and for the logarithm of the diffusion coefficient (1), the following analysis and the ML model will be based on 4,873 structures. 
 
 
 \begin{figure}[ht]
@@ -551,7 +551,7 @@ In the final section of this chapter, the combination of geometrical descriptors
 
 \subsection{ML prediction model}
 
-Calculating diffusion coefficients is an extremely time-consuming process, complicated by various challenges in the final fitting procedure. Out of the initial 6,525 structures, over a thousand were not completely evaluated with MD simulations, resulting in a success rate of approximately 75\%, mainly due to either insufficient time for obtaining a usable MSD or MSD that describe non-diffusional regimes. By utilizing an unconventionally higher time step, the time required to investigate the diffusion regime could be reduced to just a couple of days per structure. Compared to the \SI{12}{seconds} required for energy barrier calculations with an energy step of \SI{0.1}{\kJ\per\mol}, and the few minutes required to run Zeo++, the MD method is extremely slow. Even under highly optimistic hypotheses for MD simulations, the comparison is essentially between 24 hours and at most 10 minutes per structure, which corresponds to an approximate speedup of 150-fold (though, in reality, it is much higher). However, the relationships between energy barrier, PLD, and diffusion coefficient remain unclear --- the Arrhenius law generalizes limited consideration of the weak correlation shown in Figure~\ref{fgr:barrier_diffusion_a}. The aim of the ML model is to establish this relationship and achieve accurate predictions while significantly reducing the time required for predicting the diffusion coefficient of future selective materials.
+Calculating diffusion coefficients is an extremely time-consuming process, complicated by various challenges in the final fitting procedure. Out of the initial 6,525 structures, over a thousand were not completely evaluated with MD simulations, resulting in a success rate of approximately 75\%, mainly due to either insufficient time for obtaining a usable MSD or an MSD that describe non-diffusional regimes. By utilizing an unconventionally higher time step, the time required to investigate the diffusion regime could be reduced to just a couple of days per structure. Compared to the \SI{12}{seconds} required for energy barrier calculations with an energy step of \SI{0.1}{\kJ\per\mol}, and the few minutes required to run Zeo++, the MD method is extremely slow. Even under highly optimistic hypotheses for MD simulations, the comparison is essentially between 24 hours and at most 10 minutes per structure, which corresponds to an approximate speedup of 150-fold (though, in reality, it is much higher). However, the relationships between energy barrier, PLD, and diffusion coefficient remain unclear --- the Arrhenius law generalizes limited consideration of the weak correlation shown in Figure~\ref{fgr:barrier_diffusion_a}. The aim of the ML model is to establish this relationship and achieve accurate predictions while significantly reducing the time required for predicting the diffusion coefficient of future selective materials.
 
 
 \begin{table}[ht]
